--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1",
     "react-router-dom": "^7.1.3",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
