--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@heroui/react": "^2.6.14",
     "@tanstack/react-query": "^5.66.0",
     "axios": "^1.7.9",
     "flowbite": "^3.0.0",
