--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "flowbite": "^3.0.0",
     "flowbite-react": "^0.10.2",
     "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
